fixed spacing finally

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -273,12 +273,13 @@ a:focus {
     }
 }
 
-
+.content-section {
+    padding-top: 100px;
+}
 
 .download-section {
     width: 100%;
-    margin-top: 50px 0;
-    padding: 55px;
+    padding: 50px 0;
     color: #fff;
     background: url(../img/crowd-2.gif) no-repeat center center scroll;
     background-color: #000;
@@ -288,10 +289,7 @@ a:focus {
     -o-background-size: cover;
 }
 
-.contact-section {
-    margin-top: 50px;}
-
-#map {
+#map {background: url(../img/crowd-2.gif) no-repeat center center scroll;
     width: 100%;
     height: 200px;
     margin-top: 100px;
@@ -299,17 +297,16 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        margin-top: 50px;
     }
 
     .download-section {
-        padding: 125px 0;
+        padding: 100px 0;
     }
 
-    .contact-section {
-    margin-bottom: 100px;
-    margin-top: 70px;
-}
+    #map {
+        height: 400px;
+        margin-top: 250px;
+    }
 }
 
 .btn {
